# lenguaje-de-programacion

CLI To-Do App/: README.md  go.mod  tasks.json
CLI To-Do App/Golang/: main.go  tasks.json
CLI To-Do App/Golang/storage/: storage.go  storage_test.go
CLI To-Do App/Golang/tasks/: add.go  status.go  tasks_test.go  types.go  update.go  validate.go
CLI To-Do App/Rust/: Cargo.toml  README.md  tasks.json
CLI To-Do App/Rust/src/: main.rs
CLI To-Do App/Rust/src/command/: mod.rs  tests.rs
CLI To-Do App/Rust/src/storage/: mod.rs  tests.rs
CLI To-Do App/Rust/src/tasks/: add.rs  delete.rs  list.rs  mod.rs  status.rs  tests.rs  types.rs  update.rs  validate.rs
CLI To-Do App/command/: command.go  command_test.go
CLI To-Do App/tasks/: delete.go  list.go
CLI To-Do App/testutil/: testutil.go
Documentations/C#/: Documentación de C# - Juan Diego Cordero.ipynb
Documentations/PHP/: Documentación de PHP - Juan Diego Cordero.ipynb
Documentations/Ruby/: Documentación de Ruby - Juan Diego Cordero.ipynb
Registration Form/: index.php  procesar.php  styles.css
