[package]
name = "to-do-app"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
serde_repr = "0.1"
comfy-table = "7.1"
thiserror = "1.0"
